--- a/assignments/2022-12-01-exercise08.html
+++ b/assignments/2022-12-01-exercise08.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>2022-11-19-exercise07 - MTH201</title>
+  <title>2022-12-01-exercise08 - MTH201</title>
   <meta charset="utf-8" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet" type="text/css">
@@ -38,26 +38,24 @@
     <section id="pagecontent">
         <article>
     <section class="header">
-        <h1>Exercise sheet 7</h1>
+        <h1>Exercise sheet 8</h1>
     </section>
     <section>
       <p>
 	
-	<a href="../assignments/2022-11-05-exercise06.html" class="prev"><<</a>
+	<a href="../assignments/2022-11-19-exercise07.html" class="prev"><<</a>
 	
-	
-	<a href="../assignments/2022-12-01-exercise08.html" style="float:right" class="next">>></a>
 	
       </p>
-<p class="date"><strong>&nbsp;Last modified: 03:27 PM - 19 November, 2022 </strong></p>
+<p class="date"><strong>&nbsp;Last modified: 04:36 PM -  1 December, 2022 </strong></p>
 	  
-	  <a href="../assignments/pdfs/2022-11-19-exercise07.pdf">PDF version</a>
+	  <a href="../assignments/pdfs/2022-12-01-exercise08.pdf">PDF version</a>
 	  
 	  
         <ol>
-<li><p>Compute the principal curvatures of a plane and a sphere.</p></li>
-<li><p>Show that if the second fundamental form is 0 at each point then the image of the surface patch must lie on a plane.</p></li>
-<li><p>Show that if the two principal curvatures of a surface are the same, then the surface lies on a plane or a sphere.</p></li>
+<li><p>Show that if <span class="math inline">\(\gamma\)</span> parametrizes a line that lies on a surface, then <span class="math inline">\(\gamma\)</span> is a geodesic of that surface.</p></li>
+<li><p>Prove that <span class="math inline">\(\gamma\)</span> is a geodesic if and only if its geodesic curvature is 0</p></li>
+<li><p>Show that any geodesic in a plane must be a straight line</p></li>
 </ol>
     </section>
 </article>
